Resettable API key for generic http device

--- a/src/app/shared/components/delete-dialog/delete-dialog.component.html
+++ b/src/app/shared/components/delete-dialog/delete-dialog.component.html
@@ -5,10 +5,10 @@
 </div>
 <div mat-dialog-actions class="d-flex flex-row-reverse">
     <button *ngIf="dialogModel.showCancel" click="close()" mat-dialog-close class="btn btn-primary ml-2">
-        {{'DIALOG.CLOSE' | translate}}
+        {{ dialogModel.cancelText || 'DIALOG.CLOSE' | translate}}
     </button>
     <button *ngIf="dialogModel.showAccept" [mat-dialog-close]="true" mat-dialog-close class="btn btn-secondary ml-2">
-        {{'DIALOG.DIALOG-CONFIRM' | translate}}
+        {{ dialogModel.acceptText || 'DIALOG.DIALOG-CONFIRM' | translate}}
     </button>
     <button *ngIf="dialogModel.showOk" click="close()" mat-dialog-close class="btn btn-primary ml-2">
         {{'DIALOG.OK' | translate}}
