--- a/src/app/applications/datatarget/mqtt-edit/mqtt-edit.component.html
+++ b/src/app/applications/datatarget/mqtt-edit/mqtt-edit.component.html
@@ -32,20 +32,41 @@
 
   <div class="row mb-2">
     <div class="form-group mt-3 col-12">
+      <label class="form-label" for="mqtt-port">{{'QUESTION.DATATARGET.MQTT.GIVE-PORT' | translate}}</label>*
+      <input type="number" class="form-control" id="mqtt-port" name="mqtt-port" [required]="true"
+        [placeholder]="'QUESTION.DATATARGET.MQTT.GIVE-PORT-PLACEHOLDER' | translate" [(ngModel)]="datatarget.mqttPort"
+        step="1" min="1025" max="65535"
+        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('mqttPort'), 'is-valid' : formFailedSubmit && !errorFields.includes('mqttPort')}">
+    </div>
+  </div>
+
+  <div class="row mb-2">
+    <div class="form-group mt-3 col-12">
+      <label class="form-label" for="mqtt-qos">{{'QUESTION.DATATARGET.MQTT.GIVE-QOS' | translate}}</label>*
+      <fa-icon [icon]="faQuestionCircle" class="form-info-icon"
+        [matTooltip]="'QUESTION.DATATARGET.MQTT.GIVE-QOS-INFO' | translate" matTooltipPosition="above"
+        matTooltipShowDelay="600" matTooltipHideDelay="2000"></fa-icon>
+      <input type="number" class="form-control" id="mqtt-qos" name="mqtt-qos" [required]="true"
+        [placeholder]="'QUESTION.DATATARGET.MQTT.GIVE-QOS-PLACEHOLDER' | translate" [(ngModel)]="datatarget.mqttQos"
+        step="1" min="0" max="2"
+        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('mqttQos'), 'is-valid' : formFailedSubmit && !errorFields.includes('mqttQos')}">
+    </div>
+  </div>
+
+  <div class="row mb-2">
+    <div class="form-group mt-3 col-12">
       <label class="form-label" for="mqtt-topic">{{'QUESTION.DATATARGET.MQTT.GIVE-TOPIC' | translate}}</label>*
       <input type="text" class="form-control" id="mqtt-topic" name="mqtt-topic"
         [placeholder]="'QUESTION.DATATARGET.MQTT.GIVE-TOPIC-PLACEHOLDER' | translate" required
         [(ngModel)]="datatarget.mqttTopic"
-        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('mqtt-topic'), 'is-valid' : formFailedSubmit && !errorFields.includes('mqtt-topic')}">
+        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('mqttTopic'), 'is-valid' : formFailedSubmit && !errorFields.includes('mqttTopic')}">
     </div>
   </div>
 
-  <ng-container *ngIf="authenticationMethod === MqttAuthenticationType.UsernamePassword">
-    <div class="row mb-2">
+  <div class="row mb-2">
     <div class="form-group mt-3 col-12">
       <label class="form-label" for="mqttUsername">{{'QUESTION.DATATARGET.MQTT.GIVE-USERNAME' | translate}}</label>*
-      <input type="text" class="form-control" id="mqttUsername" name="mqttUsername"
-        [required]="true"
+      <input type="text" class="form-control" id="mqttUsername" name="mqttUsername" [required]="true"
         [(ngModel)]="datatarget.mqttUsername"
         [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('mqttUsername'), 'is-valid' : formFailedSubmit && !errorFields.includes('mqttUsername')}">
     </div>
@@ -54,13 +75,11 @@
   <div class="row mb-2">
     <div class="form-group mt-3 col-12">
       <label class="form-label" for="mqttPassword">{{'QUESTION.DATATARGET.MQTT.GIVE-PASSWORD' | translate}}</label>*
-      <input type="password" class="form-control" id="mqttPassword" name="mqttPassword"
-        [required]="true"
+      <input type="password" class="form-control" id="mqttPassword" name="mqttPassword" [required]="true"
         [(ngModel)]="datatarget.mqttPassword"
         [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('mqttPassword'), 'is-valid' : formFailedSubmit && !errorFields.includes('mqttPassword')}">
     </div>
   </div>
-</ng-container>
 
   <div class="row mb-2">
     <div class="form-group mt-3 col-12">
@@ -73,6 +92,59 @@
 
   <div *ngIf="!datatargetId">
     <h6> {{'QUESTION.DATATARGET.RELATIONS' | translate}} </h6>
+  </div>
+
+  <div class="container row" class="mt-3" *ngIf="datatargetId">
+    <a (click)="addRow()" class="btn btn-secondary my-2 mb-3 mt-3">{{'QUESTION.ADD-RELATIONS' | translate}}</a>
+    <ng-container *ngIf="devices && payloadDecoders && payloadDeviceDatatarget?.length > 0">
+      <table class="table table-striped table-bordered">
+        <tbody>
+          <tr *ngFor="let element of payloadDeviceDatatarget; let i = index;" [attr.data-index]="i">
+            <td>
+              <div class="row">
+                <mat-form-field appearance="fill">
+                  <mat-label>{{'QUESTION.DATATARGET.SELECT-DEVICES' | translate}}</mat-label>
+                  <mat-select multiple name="devices" [(value)]="element.iotDeviceIds">
+                    <mat-option disabled="disabled" class="filter-option">
+                      <button mat-raised-button class="mat-primary fill text-sm" (click)="selectAllDevices(i)">
+                        {{'QUESTION.DATATARGET.SELECTALLDEVICES' | translate}}
+                      </button>
+                      <button mat-raised-button class="mat-primary fill text-sm" (click)="deselectAllDevices(i)">
+                        {{'QUESTION.DATATARGET.DESELECTALLDEVICES' | translate}}
+                      </button>
+                    </mat-option>
+                    <mat-option *ngFor="let device of devices" [value]="device.id">{{device.name}}</mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+            </td>
+            <td>
+              <div class="row">
+                <mat-form-field appearance="fill">
+                  <mat-label>{{'QUESTION.DATATARGET.SELECT-PAYLOADDECODER' | translate}}</mat-label>
+                  <mat-select matNativeControl name="payloadDecoderId" [(value)]="element.payloadDecoderId">
+                    <mat-option [value]="0">
+                      {{'QUESTION.DATATARGET.NO-PAYLOAD-DECODER-SELECTED' | translate}}
+                    </mat-option>
+                    <mat-option *ngFor="let payloadDecoder of payloadDecoders" [value]="payloadDecoder.id">
+                      {{payloadDecoder.name}}
+                    </mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+            </td>
+            <td>
+              <a (click)="openDeleteDialog(i)">
+                <div class="text-center m-2">
+                  <fa-icon [icon]="faTimesCircle"></fa-icon>
+                  <p>{{'DATATARGET.DELETE' | translate}}</p>
+                </div>
+              </a>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </ng-container>
   </div>
 
   <div class="form-group mt-5">
