Added details to mqtt datatarget. Mostly duplicated

--- a/src/app/applications/datatarget/datatarget-table/datatarget-table.component.html
+++ b/src/app/applications/datatarget/datatarget-table/datatarget-table.component.html
@@ -21,7 +21,7 @@
         {{ 'DATATARGET-TABLE.TYPE' | translate }}</th>
       <td mat-cell *matCellDef="let element">
 
-        {{'DATATARGET.' + element.type | translate}}</td>
+        {{'DATATARGET.' + element.type + '.TYPE' | translate}}</td>
     </ng-container>
 
     <!-- Menu Column -->
