--- a/src/app/applications/iot-devices/iot-device-detail/iot-device-detail-generic/iot-device-detail-generic.component.html
+++ b/src/app/applications/iot-devices/iot-device-detail/iot-device-detail-generic/iot-device-detail-generic.component.html
@@ -1,4 +1,4 @@
-<div class="row ">
+<div class="row">
     <div class="col-md-6 d-flex align-items-stretch">
         <div class="jumbotron jumbotron--m-right jumbotron--full-width">
             <h3>{{ 'IOTDEVICE.DETAIL' | translate }}</h3>
@@ -32,6 +32,13 @@
             <!-- SIGFOX DEVICE-->
             <ng-container *ngIf="device.type === 'SIGFOX' && device.sigfoxSettings">
                 <app-iot-device-detail-sigfox [device]="device"></app-iot-device-detail-sigfox>
+            </ng-container>
+            <ng-container  *ngIf="device.type === 'GENERIC_HTTP'">
+                <mat-divider></mat-divider>
+                <p>
+                    <strong>{{ 'IOTDEVICE.GENERIC_HTTP.APIKEY' | translate }}</strong>
+                    <span class="pre">{{ getGenericHttpDeviceUrl(device) }}</span>
+                </p>
             </ng-container>
             <!-- Comment -->
             <mat-divider></mat-divider>
