Show signal strength (#81)
* Added columns. Error in lorawan component. Branch blocked until further notice

* Fix TS error

* Add signals to message. Not tested

* Init graph and tabs on device detail page

* Re-design device details page with tabs and history

* Remove lorawan field component. Data is shown now shown under history

* Update data rate colors. Limit to DR7

--- a/src/app/applications/iot-devices/iot-device-detail/iot-device-detail-generic/iot-device-detail-generic.component.html
+++ b/src/app/applications/iot-devices/iot-device-detail/iot-device-detail-generic/iot-device-detail-generic.component.html
@@ -1,4 +1,4 @@
-<div class="row ">
+<div class="row">
     <div class="col-md-6 d-flex align-items-stretch">
         <div class="jumbotron jumbotron--m-right jumbotron--full-width">
             <h3>{{ 'IOTDEVICE.DETAIL' | translate }}</h3>
@@ -12,8 +12,11 @@
                     [percentage]="batteryStatusPercentage"></app-batteri-status>
                 <ng-template #noBatteryStatus>
                     <div>
-                        <p>{{ 'IOTDEVICE-TABLE-ROW.BATTERY-ERROR-MESSAGE' | translate }}</p>
+                        <p>{{ 'IOTDEVICE-TABLE-ROW.NOT-SUPPORTED-SHORT' | translate }}</p>
                     </div>
+                </ng-template>
+                <ng-template #notAvailable>
+                  <span>{{'IOTDEVICE-TABLE-ROW.NOT-AVAILABLE' | translate}}</span>
                 </ng-template>
             </div>
             <mat-divider></mat-divider>
@@ -28,6 +31,13 @@
             <!-- SIGFOX DEVICE-->
             <ng-container *ngIf="device.type === 'SIGFOX' && device.sigfoxSettings">
                 <app-iot-device-detail-sigfox [device]="device"></app-iot-device-detail-sigfox>
+            </ng-container>
+            <ng-container  *ngIf="device.type === 'GENERIC_HTTP'">
+                <mat-divider></mat-divider>
+                <p>
+                    <strong>{{ 'IOTDEVICE.GENERIC_HTTP.APIKEY' | translate }}</strong>
+                    <span class="pre">{{ getGenericHttpDeviceUrl(device) }}</span>
+                </p>
             </ng-container>
             <!-- Comment -->
             <mat-divider></mat-divider>
