Init gateway status overview.
Styling not done. Dummy data

--- a/src/app/gateway/gateway-list/gateway-list.component.html
+++ b/src/app/gateway/gateway-list/gateway-list.component.html
@@ -20,6 +20,11 @@
           </app-map>
         </div>
       </mat-tab>
+      <mat-tab label="{{'LORA-GATEWAY-TABLE.STATUS' | translate}}">
+        <div class="jumbotron--table">
+          <app-gateway-status></app-gateway-status>
+        </div>
+      </mat-tab>
     </mat-tab-group>
   </div>
 </div>
