--- a/src/app/gateway/gateway-status/gateway-status.component.html
+++ b/src/app/gateway/gateway-status/gateway-status.component.html
@@ -1,52 +1,52 @@
-<!-- TODO: Tasks
-  Responsiveness on smaller screens or if there's too many columns
-  - Already has horizontal scroll on iPad portrait.
-  - "next page" where the next/previous 6 hours is shown. 24 hours is too much on iPad portrait
-  - max width on cell?
-  - min and max date picker?
+<ng-template #noGatewayStatusData>
+  <ng-container *ngIf="!isLoadingResults">
+    <p>{{ 'GEN.NO-DATA' | translate }}</p>
+  </ng-container>
+</ng-template>
 
-
-
-  Gateway id vs gateway name
-  - Use name if possible. Will it work if pagination is introduced?
-
-  __Backend__
-  Fetch gateways paginated
-  - Shouldn't be a heavy operation if we DON'T ask fetch info for every single one.
-  - Sorting shouldn't be a concern. Chirpstack doesn't support this and the "listevisning" tab only sorts on response
-
-  __Questions__
-   Colors used from variables.scss instead of from grafana example. Is it okay?
-
--->
-<h4 class="text-center">{{ 'LORA-GATEWAY-STATUS.TITLE' | translate}}</h4>
-<div class="d-flex margin-right--5">
-  <table #gatewayStatus mat-table [dataSource]="dataSource" class="status-table">
-    <ng-container matColumnDef="gatewayName">
-      <td mat-cell *matCellDef="let element" class="text--semibold">{{element.id}}</td>
-      <td mat-footer-cell *matFooterCellDef class="text--semibold text-center">
-        {{'GEN.DATE' | translate}}
-        <br />
-        {{'LORA-GATEWAY-STATUS.TIMESTAMP' | translate}}
-      </td>
-    </ng-container>
-
-    <ng-container *ngFor="let time of timeColumns; let index = index" matColumnDef="{{time}}">
-      <td mat-cell *matCellDef="let gateway" [matTooltip]="formatTooltip(gateway, time)"
-        [matTooltipClass]="'status-tooltip'" [ngClass]="getStatusClass(gateway, time)"></td>
-      <td mat-footer-cell *matFooterCellDef="let gateway" [ngClass]="{'invisible': index % visibleFooterTimeInterval}">
-        {{formatFooterDate(time)}}
-        <br />
-        {{formatTime(time)}}
-      </td>
-    </ng-container>
-
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
-  </table>
-  <!-- Empty spacing if table overflows -->
-  <div class="pl-4"></div>
+<div class="d-flex">
+  <mat-select class="form-control ml-auto status-interval" name="statusIntervals" [(ngModel)]="selectedStatusInterval">
+    <mat-option *ngFor="let interval of statusIntervals" [value]="interval"
+      (onSelectionChange)="onSelectInterval($event)">
+      {{ 'LORA-GATEWAY-STATUS.INTERVAL.' + interval | translate }}
+    </mat-option>
+  </mat-select>
 </div>
+<div class="d-flex flex-row">
+  <div class="d-flex overflow-auto">
+    <div class="loading-shade" *ngIf="isLoadingResults">
+      <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+    </div>
+    <!-- TODO: Handle if time columns are empty -->
+    <table #gatewayStatus mat-table [dataSource]="dataSource" class="status-table"
+      *ngIf="dataSource?.data.length && timeColumns.length; else noGatewayStatusData">
+      <ng-container matColumnDef="gatewayName">
+        <td mat-cell *matCellDef="let element" class="text--semibold">{{element.name}}</td>
+        <td mat-footer-cell *matFooterCellDef class="text--semibold text-center">
+          {{'GEN.DATE' | translate}}
+          <br />
+          {{'LORA-GATEWAY-STATUS.TIMESTAMP' | translate}}
+        </td>
+      </ng-container>
+
+      <ng-container *ngFor="let time of timeColumns; let index = index" matColumnDef="{{time}}">
+        <td mat-cell *matCellDef="let gateway" [matTooltip]="formatTooltip(gateway, time)"
+          [matTooltipClass]="'status-tooltip'" [ngClass]="getStatusClass(gateway, time)"></td>
+        <td mat-footer-cell *matFooterCellDef="let gateway"
+          [ngClass]="{'invisible': index % visibleFooterTimeInterval}">
+          {{formatFooterDate(time)}}
+          <br />
+          {{formatTime(time)}}
+        </td>
+      </ng-container>
+
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
+    </table>
+  </div>
+</div>
+<mat-paginator [pageSizeOptions]="[25, 50, 100]" [pageSize]="pageSize" [length]="resultsLength" showFirstLastButtons>
+</mat-paginator>
 <div class="status-legend d-flex flex-row mt-3">
   <div class="d-flex flex-column">
     <div class="legend online"></div>
