--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -6,7 +6,7 @@
   </mat-card-header>
   <mat-card-content>
     <div class="no-data-container" *ngIf="isGraphEmpty">
-      <h3>{{ 'GRAPH.NO-DATA' | translate }}</h3>
+      <h3>{{ 'GEN.NO-DATA' | translate }}</h3>
     </div>
     <canvas #someGraph [ngClass]="{'width-100': isGraphEmpty}"></canvas>
   </mat-card-content>
