--- a/src/app/gateway/gateway-status/gateway-status.component.html
+++ b/src/app/gateway/gateway-status/gateway-status.component.html
@@ -21,7 +21,7 @@
     *ngIf="dataSource?.data.length && timeColumns.length; else noGatewayStatusData">
     <ng-container matColumnDef="gatewayName">
       <td mat-cell *matCellDef="let element" class="text--semibold">{{element.name}}</td>
-      <td mat-footer-cell *matFooterCellDef class="text--semibold text-center">
+      <td mat-footer-cell *matFooterCellDef class="text--semibold">
         {{'GEN.DATE' | translate}}
         <br />
         {{'LORA-GATEWAY-STATUS.TIMESTAMP' | translate}}
@@ -31,7 +31,8 @@
     <ng-container *ngFor="let time of timeColumns; let index = index" matColumnDef="{{time}}">
       <td mat-cell *matCellDef="let gateway" [matTooltip]="formatTooltip(gateway, time)"
         [matTooltipClass]="'status-tooltip'" [ngClass]="getStatusClass(gateway, time)"></td>
-      <td mat-footer-cell *matFooterCellDef="let gateway" [ngClass]="{'invisible': index % visibleFooterTimeInterval}">
+      <td mat-footer-cell *matFooterCellDef="let gateway"
+        [ngClass]="{'invisible': index % visibleFooterTimeInterval, 'text-center': true}">
         {{formatFooterDate(time)}}
         <br />
         {{formatTime(time)}}
@@ -42,7 +43,8 @@
     <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
   </table>
 </div>
-<mat-paginator [ngClass]="paginatorClass" [pageSizeOptions]="[25, 50, 100]" [pageSize]="pageSize" [length]="resultsLength" showFirstLastButtons>
+<mat-paginator [ngClass]="paginatorClass" [pageSizeOptions]="[25, 50, 100]" [pageSize]="pageSize"
+  [length]="resultsLength" showFirstLastButtons>
 </mat-paginator>
 <div class="status-legend d-flex flex-row mt-3">
   <div class="d-flex flex-column">
