Optimize performance on gateway status

--- a/src/app/gateway/gateway-status/gateway-status.component.scss
+++ b/src/app/gateway/gateway-status/gateway-status.component.scss
@@ -36,6 +36,7 @@ $cellFontSize: 0.9rem;
 
         &:not(:first-child) {
           max-width: 1.2rem;
+          border-radius: 3px;
         }
 
         &:first-child {
