--- a/src/app/gateway/gateway-status/gateway-status.component.html
+++ b/src/app/gateway/gateway-status/gateway-status.component.html
@@ -20,7 +20,9 @@
   <table #gatewayStatus mat-table [dataSource]="dataSource" class="status-table"
     *ngIf="dataSource?.data.length && timeColumns.length; else noGatewayStatusData">
     <ng-container matColumnDef="gatewayName">
-      <td mat-cell *matCellDef="let element" class="text--semibold">{{element.name}}</td>
+      <td mat-cell *matCellDef="let element">
+        <a [routerLink]="'/gateways/gateway-detail/' + element.id" routerLinkActive="active">{{element.name}}</a>
+      </td>
       <td mat-footer-cell *matFooterCellDef class="text--semibold">
         {{'GEN.DATE' | translate}}
         <br />
@@ -28,14 +30,16 @@
       </td>
     </ng-container>
 
-    <ng-container *ngFor="let time of timeColumns; let index = index" matColumnDef="{{time}}">
-      <td mat-cell *matCellDef="let gateway" [matTooltip]="formatTooltip(gateway, time)"
-        [matTooltipClass]="'status-tooltip'" [ngClass]="getStatusClass(gateway, time)"></td>
-      <td mat-footer-cell *matFooterCellDef="let gateway"
+    <ng-container *ngFor="let time of timeColumns; let index = index" matColumnDef="{{time.exactTimestamp}}">
+      <td mat-cell *matCellDef="let gateway"
+        [matTooltip]="!!gateway.statusTimestamps.length | gatewayStatusTooltip: neverSeenText:timestampText:time.tooltip:nameText:gateway.name"
+        [matTooltipClass]="'status-tooltip'"
+        [ngClass]="gateway.statusTimestamps | gatewayStatusClass: time.exactTimestamp"></td>
+      <td mat-footer-cell *matFooterCellDef=" let gateway"
         [ngClass]="{'invisible': index % visibleFooterTimeInterval, 'text-center': true}">
-        {{formatFooterDate(time)}}
+        {{time.datePart}}
         <br />
-        {{formatTime(time)}}
+        {{time.timePart}}
       </td>
     </ng-container>
 
