--- a/src/app/navbar/organisation-dropdown/organisation-dropdown.component.html
+++ b/src/app/navbar/organisation-dropdown/organisation-dropdown.component.html
@@ -19,12 +19,14 @@
         </a>
         <fa-icon [icon]="faToolbox" class="navbar-icon"></fa-icon>
     </li>
-    <li>
-        <a routerLink="/device-model" routerLinkActive="active" class="nav-link pl-5 position-relative rounded">
-            {{'NAV.DEVICE-MODEL' | translate}}
-        </a>
-        <fa-icon [icon]="faBurn" class="navbar-icon"></fa-icon>
-    </li>
+	<div *ngIf="!isOnlyGatewayAdmin">
+		<li>
+			<a routerLink="/device-model" routerLinkActive="active" class="nav-link pl-5 position-relative rounded">
+				{{'NAV.DEVICE-MODEL' | translate}}
+			</a>
+			<fa-icon [icon]="faBurn" class="navbar-icon"></fa-icon>
+    	</li>
+	</div>    
     <div *ngIf="user && isUserAdmin && !isGlobalAdmin">
         <li class="nav-item">
             <a routerLink="/admin/users" routerLinkActive="active" class="nav-link pl-5 position-relative rounded">
