--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -1,4 +1,4 @@
-<mat-card class="chart-container">
+<mat-card class="chart-container" [ngClass]="chartClass">
   <mat-card-header *ngIf="title">
     <mat-card-title>
       {{title}}
@@ -6,7 +6,7 @@
   </mat-card-header>
   <mat-card-content>
     <div class="no-data-container" *ngIf="isGraphEmpty">
-      <h3>{{ 'GEN.NO-DATA' | translate }}</h3>
+      <span class="text--big">{{ 'GEN.NO-DATA' | translate }}</span>
     </div>
     <canvas #someGraph [ngClass]="{'width-100': isGraphEmpty}"></canvas>
   </mat-card-content>
