--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -1,5 +1,5 @@
-<mat-card class="chart-container" [ngClass]="chartClass">
-  <mat-card-header *ngIf="title">
+<mat-card class="chart-container" [ngClass]="graphCardClass">
+  <mat-card-header *ngIf="title"  [ngClass]="graphHeaderClass">
     <mat-card-title>
       {{title}}
     </mat-card-title>
