--- a/src/styles.scss
+++ b/src/styles.scss
@@ -93,3 +93,7 @@ body {
   background: rgba(97, 97, 97, 1.0);
   white-space: pre-line;
 }
+
+.mat-card-header-text-ml-0 .mat-card-header-text {
+  margin-left: 0;
+}
