Landing page is now /applications.
Show welcome dialog for new logins with previous dashboard content. Dashboard deleted

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -89,3 +89,14 @@ body {
   font-size: 1rem !important;
 }
 
+.welcome-screen .mat-dialog-container {
+  background-color: #55b156;
+}
+
+.hide-checkbox {
+  color: $color-white-001;
+
+  .mat-checkbox-frame {
+    border-color: $color-white-001;
+  }
+}
