Changed RejectUserDto to have all the info about the rejected user
Minor code improvements

--- a/src/app/admin/users/user-list/awaiting-users-table/awaiting-users-table.component.html
+++ b/src/app/admin/users/user-list/awaiting-users-table/awaiting-users-table.component.html
@@ -61,7 +61,7 @@
                 [routerLink]="[
                   '/admin/users/accept-user/',
                   element.id,
-                  rejectUserOrg.orgId
+                  organizationId
                 ]"
                 routerLinkActive="active"
                 >{{ 'USERS.TABLE-ROW.APPROVE' | translate }}
@@ -88,4 +88,3 @@
   >
   </mat-paginator>
 </div>
-<!-- </ng-template> -->
